Translation of enum button tooltips broken #117672

Closed
opened 2024-01-30 17:50:42 +01:00 by Damien Picard · 2 comments
Member

System Information
Operating system: Linux-6.5.0-15-generic-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.154.05

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-26 11:06, hash: dd0798927f1d
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-19 14:19, hash: cb787a458b0d

Introduced in 90c4e2e6ec.

Short description of error
The item part of enum buttons tooltips are no longer translated after 90c4e2e6ec.

Exact steps for others to reproduce the error

  • Change translation language in the user preferences
  • Hover over any enum button
  • Part of the tooltip describing the enum item is not translated.

Before / after:
image

CC @HooglyBoogly

**System Information** Operating system: Linux-6.5.0-15-generic-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.154.05 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-26 11:06, hash: `dd0798927f1d` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-19 14:19, hash: `cb787a458b0d` Introduced in 90c4e2e6ec. **Short description of error** The item part of enum buttons tooltips are no longer translated after 90c4e2e6ec. **Exact steps for others to reproduce the error** - Change translation language in the user preferences - Hover over any enum button - Part of the tooltip describing the enum item is not translated. Before / after: ![image](/attachments/ba41de85-a2e4-4657-9254-b8fedf34cb7c) CC @HooglyBoogly
Member

Can confirm

CC @HooglyBoogly

Can confirm CC @HooglyBoogly
Philipp Oeser added
Status
Confirmed
Severity
High
and removed
Status
Needs Triage
Severity
Normal
labels 2024-01-31 12:51:40 +01:00
Member

We are now getting the enum item via RNA_property_enum_item_from_value_gettexted (as opposed to RNA_property_enum_items_gettexted prior to 90c4e2e6ec.

The former does not translate the description (whereas the later does).

Will put up a PR shortly

We are now getting the enum item via `RNA_property_enum_item_from_value_gettexted` (as opposed to `RNA_property_enum_items_gettexted` prior to 90c4e2e6ec. The former does not translate the description (whereas the later does). Will put up a PR shortly
Philipp Oeser self-assigned this 2024-01-31 14:07:45 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-31 14:57:41 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-01-31 15:02:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117672
No description provided.