Fix #117672: Translation of enum button tooltips broken

Caused by 90c4e2e6ec.

We are now getting the enum item via
`RNA_property_enum_item_from_value_gettexted` (as opposed to
`RNA_property_enum_items_gettexted` prior to 90c4e2e6ec).

The former does not translate the description (whereas the later does)
which I think is just an oversight.

To resolve, now add description translation to
`RNA_property_enum_item_from_value_gettexted`.

Pull Request: https://projects.blender.org/blender/blender/pulls/117693